tests/negative/neg_pr118b1_receive_contract.safe
-- Test: neg_pr118b1_receive_contract
-- Description: Receive-like operations must stay within the task receives contract.
-- Expected: REJECT

package neg_pr118b1_receive_contract

   subtype message is integer (0 to 10)

   channel data_ch : message capacity 1
   channel allowed_ch : message capacity 1

   task worker with priority = 10, receives allowed_ch

      loop
         var item : message = 0
         receive data_ch, item
